<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name_contact">Name</string>
    <string name="Surname">Surname</string>
    <string name="Birthday_contact">Birthday</string>
    <string name="Phone_contact">Phone Number</string>
    <string name="Name_Surname">Contact</string>
    <string name="Phone">Phone number</string>
    <string name="Birthday">Birthday</string>


    <string name="delete_dialog_tag">Delete</string>
    <string name="delete_question">Delete contact?</string>
    <string name="item_selected_msg">Contact Info</string>
    <string name="calling_question">Call</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_cancel">Cancel</string>



    <string name="call_dialog_tag">Calling</string>
    <string name="long_click_msg"/>
    <string name="retry_msg">Yes</string>
    <string name="add_task">Add</string>
    <string name="delete_cancel_msg">Try again?</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="default_name">default_name</string>
    <string name="default_surname">default_surname</string>
    <string name="default_birthday"/>
    <string name="default_phone"/>

</resources>
